[workspace]
resolver = "2"
members = ["claw-crypto", "claw-crypto-interface"]

[workspace.dependencies]
bcrypt = "0.15.0"
chrono = { version = "0.4.39", features = ["now", "serde"] }
mockall = "0.13.0"
rand = "0.8.5"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.134"
