[package]
name = "claw-crypto-interface"
version = "0.1.0"
edition = "2021"
authors = ["taennan taennan.dev@protonmail.com"]
repository = "https://github.com/taennan/claw-crypto"
license = "MIT OR Apache-2.0"
description = "Types and traits for the claw-crypto crate"
categories = ["authentication", "algorithms", "cryptography"]
keywords = ["crypto"]

[dependencies]
mockall = { workspace = true }
