[package]
name = "claw-crypto-interface"
version = "0.3.0"
edition = "2021"
authors = ["taennan taennan.dev@protonmail.com"]
repository = "https://github.com/taennan/claw-crypto"
license = "MIT OR Apache-2.0"
description = "Types and traits for the claw-crypto crate"
categories = ["authentication", "algorithms", "cryptography"]
keywords = ["crypto"]

[dependencies]
chrono = { workspace = true }
mockall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
