[package]
name = "claw-crypto"
version = "0.3.0"
edition = "2021"
authors = ["taennan taennan.dev@protonmail.com"]
repository = "https://github.com/taennan/claw-crypto"
license = "MIT OR Apache-2.0"
description = "Simple cryptography services to cover common auth needs"
categories = ["authentication", "algorithms", "cryptography"]
keywords = ["crypto"]

[dependencies]
bcrypt = { workspace = true }
claw-crypto-interface = { path = "../claw-crypto-interface", version = "0.1.0" }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
